force-app/main/default/objects/Account/validationRules/Phone_Required_For_High_Priority.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Required_For_High_Priority</fullName>
    <active>true</active>
    <description>High priority customers must have a phone number</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Customer_Priority__c, &quot;High&quot;),
    ISBLANK(Phone)
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone number is required for High Priority customers.</errorMessage>
</ValidationRule>